--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,9 @@
 
 body{
-    background-color:#7CBB7A;
+    /*background-color:#7CBB7A;*/
+    background-image: url(img/inicio.jpg);
+    background-repeat: no-repeat;
+    background-size: 1400px;
     margin: 0;
     font-family:"Open sans", sans-serif;
   }
